--- a/js/js作业/02js数据类型作业/简单计算器.html
+++ b/js/js作业/02js数据类型作业/简单计算器.html
@@ -143,7 +143,7 @@
         content.innerHTML = eval(content.innerHTML);
     }
     info[0].onclick = function(){
-        content.innerHTML = null;
+        content.innerHTML = "";
 
     }
     info[1].onclick = function(){
