--- a/js/js作业/04循环作业/n的阶乘.html
+++ b/js/js作业/04循环作业/n的阶乘.html
@@ -22,7 +22,7 @@
             margin:50px auto 0;
             border:1px solid blue;
         }
-        #wrap textarea{
+        #wrap input{
             resize:none;
             line-height:48px;
             font-size:20px;
@@ -51,7 +51,7 @@
 </head>
 <body>
 <div id="wrap">
-    <textarea id="num" placeholder="输入"></textarea>
+    <input id="num" placeholder="输入"></input>
     <div id="box"></div>
     <button id="btn">计算</button>
 </div>
