--- a/js/js作业/04循环作业/函数取整.html
+++ b/js/js作业/04循环作业/函数取整.html
@@ -22,9 +22,14 @@
     </style>
 </head>
 <body>
-<div id="wrap"></div>
+<div id="wrap" goudan="21321">123</div>
 
 <script>
+    let wrap =document.getElementById("wrap");
+    wrap.onclick =function(){
+        wrap.getAttribute("goudan");
+        wrap.setAttribute("xiaoafei")
+    }
 
 
 </script>
